--- a/assets/style/char.css
+++ b/assets/style/char.css
@@ -19,6 +19,8 @@ html, body {
   }
   header{
     text-align: center;
+    margin-bottom: 20px;
+
   }
   .navbar {
     margin: 0 auto;
@@ -74,21 +76,13 @@ html, body {
     font-family: 'Lobster', cursive;
     top: 10px;
     font-size: 22px;
-    height: 160px;
     text-shadow: grey 2px 5px 5px;
     margin: 0 auto;
     }
     .article_text{
       height: 80px;
     }
-    .container__article-text::after {
-      content: '';
-      width: 80px;
-      height: 4px;
-      display: block; 
-      margin: 30px auto;
-      background-color: black;
-      }
+    
     .split.left {
       
       background: url('../images/chalestone/charMAIN.jpg') center center no-repeat;
@@ -148,11 +142,8 @@ html, body {
       width: 90%;
     }
     .page_text{
-      margin: 5px;
       text-indent: 1em; /* Отступ первой строки */
       text-align: justify;
-      align-items: center;
-      text-align: center;
             }
             .mySlides .w3-display-container{
               overflow: hidden;
@@ -230,8 +221,8 @@ html, body {
       .list-link {
         margin-left: 15px;
       } 
-      .container__article-text { 
-        font-size: 28px;
+      .split.left {
+        margin: 0 auto;
       }
   }
   
@@ -262,8 +253,8 @@ html, body {
       .container__article-text{
         height: 10%;
         font-size: 32px;
-      
-      }
+        
+        }
       .title_cover{
        width: 100px;
        height: 40px;
