--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,6 +17,8 @@
   }
   header{
     text-align: center;
+    margin-bottom: 20px;
+
   }
   .navbar {
     margin: 0 auto;
@@ -71,21 +73,13 @@
     font-family: 'Lobster', cursive;
     top: 10px;
     font-size: 22px;
-    height: 160px;
     text-shadow: grey 2px 5px 5px;
 
     }
     .article_text{
       height: 80px;
     }
-    .container__article-text::after {
-      content: '';
-      width: 80px;
-      height: 4px;
-      display: block; 
-      margin: 30px auto;
-      background-color: black;
-      }
+   
     .split.left {
       
       background: url('../images/home.JPG') center center no-repeat;
@@ -223,9 +217,7 @@
       display: flex;
       align-items: center;
     }
-    .container__article-text { 
-      font-size: 28px;
-    }
+     
     .split.left {
       margin: 0 auto;
     }
@@ -254,11 +246,11 @@
     .socialnetwork_img{
        margin: 20px;
     }
-      .container__article-text{
-      height: 10%;
-      font-size: 32px;
-      
-      }
+        .container__article-text{
+        height: 10%;
+        font-size: 32px;
+        
+        }
       .title_cover{
        width: 100px;
        height: 40px;
