--- a/assets/style/char.css
+++ b/assets/style/char.css
@@ -1,267 +1,265 @@
-
-  .mySlides {display:none}
-.w3-left, .w3-right, .w3-badge {cursor:pointer}
-.w3-badge {height:13px;width:13px;padding:0}
-html, body {
-  background-color: rgb( 199, 205, 212);
-  padding:0;
-  margin:0;
+.mySlides {
+  display: none;
+}
+.w3-left,
+.w3-right,
+.w3-badge {
+  cursor: pointer;
+}
+.w3-badge {
+  height: 13px;
+  width: 13px;
+  padding: 0;
+}
+html,
+body {
+  background-color: rgb(199, 205, 212);
+  padding: 0;
+  margin: 0;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   font-family: sans-serif;
 }
- 
-  .page_wrapper{
-    width: 100%;
-    height: 80%;  
-    margin: 0 auto;
-  }
-  header{
-    text-align: center;
-    margin-bottom: 20px;
 
+.page_wrapper {
+  width: 100%;
+  height: 80%;
+  margin: 0 auto;
+}
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.navbar {
+  margin: 0 auto;
+  height: 20%;
+  border-bottom: grey 2px solid;
+  padding-bottom: 25px;
+  justify-content: space-between;
+}
+.logo_img {
+  height: 230px;
+  width: 280px;
+  padding: 10px 10px 10px 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.logo {
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.list {
+  list-style: none;
+  padding: 0;
+}
+
+.list-item {
+  padding: 10px;
+  margin: 15px;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  border-left: 6px solid grey;
+  border-right: 1px double grey;
+  box-shadow: #b4b5b5 2px 2px 2px;
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+.list-item:hover {
+  color: #fff;
+}
+.list-link {
+  text-decoration: none;
+  color: black;
+}
+
+.container__article-text {
+  padding-top: 30px;
+  text-align: center;
+  font-family: "Lobster", cursive;
+  top: 10px;
+  font-size: 22px;
+  text-shadow: grey 2px 5px 5px;
+  margin: 0 auto;
+}
+.article_text {
+  height: 80px;
+}
+
+.split.left {
+  background: url("../images/chalestone/charMAIN.jpg") center center no-repeat;
+  padding: 12px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-position: 50% 50%;
+  height: 600px;
+  margin: 0 auto;
+  margin: 0 5px 5px 5px;
+  position: relative;
+  border: 5px ridge #fff;
+}
+
+.innerDiv {
+  width: 90%;
+  height: 90%;
+  position: absolute;
+  border: 4px solid #fff;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 200;
+}
+.split.right.split.left:before {
+  position: absolute;
+  background: black;
+  content: "";
+  bottom: -10px;
+  right: -10px;
+  left: -10px;
+  top: -10px;
+  z-index: -1;
+}
+.title {
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 5px;
+  border-radius: 15px;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 420px;
+  background-color: rgba(10, 10, 10, 0.7);
+  width: 80%;
+}
+.page_text_wrapper {
+  margin: 0 auto;
+  padding: 20px;
+  width: 90%;
+}
+.page_text {
+  text-indent: 1em; /* Отступ первой строки */
+  text-align: justify;
+}
+.mySlides .w3-display-container {
+  overflow: hidden;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #fff;
+}
+
+.footer__wrapper {
+  box-sizing: border-box;
+  height: 20vh;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+  border: 10px double black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.footer_text {
+  text-align: center;
+  font-family: "Kreon", serif;
+}
+.image__wrapper {
+  text-align: center;
+  align-items: center;
+}
+.socialnetwork_img {
+  width: 60px;
+  height: 60px;
+  border: 2px double #fff;
+}
+
+@media (min-width: 768px) {
+  .split {
+    width: 90%;
+  }
+  .list {
+    width: 100%;
+    display: flex;
+    align-items: center;
   }
   .navbar {
+    display: flex;
+    width: 90%;
     margin: 0 auto;
-    height: 20%;
-    border-bottom:grey 2px solid;
-    padding-bottom: 25px;   
-    justify-content: space-between; 
+    justify-content: space-between;
+    padding: 0;
   }
-    .logo_img{
-    height: 230px;
-    width: 280px;
-    padding: 10px 10px 10px 10px;
+  .navbar_navs {
+    display: flex;
+  }
+  .logo {
+    height: 120px;
+    margin: 0;
+  }
+  .logo_img {
+    height: 110px;
+    width: 160px;
     max-width: 100%;
     max-height: 100%;
-    }
+  }
+  .list-item {
+    width: 100%;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+  }
+  .list-link {
+    margin-left: 15px;
+  }
+  .split.left {
+    margin: 0 auto;
+  }
+}
 
-    .logo{
+@media (min-width: 960px) {
+  .split.left {
+    margin: 0 auto;
     text-align: center;
     align-items: center;
-    margin: 0 auto;
-    }
-    .list {
-    list-style:none;
-    padding: 0;
-    }
-   
-    .list-item{
-    padding: 10px;
-    margin: 15px;
-    font-weight: bold; 
-    font-size: 18px;
-    cursor: pointer;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    border-left: 6px solid grey;
-    border-right: 1px double grey;
-    box-shadow: #B4B5B5 2px 2px 2px;
-    width: 60%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    }
-    .list-item:hover {
-       color: #fff; 
-    }
-    .list-link {
-      text-decoration: none;
-      color: black;
-    }
-    
-    .container__article-text{
-    padding-top: 30px;  
-    text-align: center;
-    font-family: 'Lobster', cursive;
-    top: 10px;
-    font-size: 22px;
-    text-shadow: grey 2px 5px 5px;
-    margin: 0 auto;
-    }
-    .article_text{
-      height: 80px;
-    }
-    
-    .split.left {
-      
-      background: url('../images/chalestone/charMAIN.jpg') center center no-repeat;
-      padding: 12px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;      
-      background-position: 50% 50%; 
-      height: 600px;
-      margin: 0 auto;
-      margin: 0 5px 5px 5px;
-      position: relative;
-      border: 5px ridge #fff;
-        }
-   
-   
-  
-   .innerDiv{
-     width: 90%;
-     height: 90%;
-    position: absolute;
-    border: 4px solid #fff;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    z-index: 200;
-   }
-    .split.right.split.left:before {
-      position: absolute;
-      background: black;
-      content: '';
-      bottom: -10px;
-      right: -10px;
-      left: -10px;
-      top: -10px;
-      z-index: -1;
-    }
-    .title {
-    margin: 0 auto;  
-    margin-top: 20px;
-    padding: 5px;
-    border-radius: 15px; 
-    color: #fff;
-    text-align: center;
-    margin-bottom: 420px;
-    background-color: rgba(10, 10, 10, 0.7);
-        width: 80%;
-
-    }
-    .page_text_wrapper{
-      margin: 0 auto;
-      padding: 20px;
-      width: 90%;
-    }
-    .page_text{
-      text-indent: 1em; /* Отступ первой строки */
-      text-align: justify;
-            }
-            .mySlides .w3-display-container{
-              overflow: hidden;
-              margin: 0 auto;
-              text-align: center;
-              background-color: #fff;
-            }
-   
-    .footer__wrapper{
-        box-sizing: border-box;
-        height: 20vh;
-        width: 90%;
-        margin: 0 auto;
-        margin-top: 20px;
-        border: 10px double black;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin-bottom: 5px;
-    }
-    .footer_text{
-        text-align: center;
-        font-family: 'Kreon', serif;
-    }
-    .image__wrapper{
-        text-align: center;
-        align-items: center;
-  
-    
-    }
-    .socialnetwork_img{
-        width: 60px;
-        height: 60px;
-        border: 2px double #fff;
-    }
-
-
-
-  
-  @media(min-width: 768px) {
-    .split {
-      width: 90%;
-    }
-    .list {
-      width: 100%;
-      display: flex;
-      align-items: center;
-    }
-    .navbar {
-      display: flex;
-      width: 90%;
-      margin: 0 auto;
-      justify-content: space-between;
-      padding: 0;
-    }
-    .navbar_navs{
-      display: flex;
-    }
-    .logo {
-      height: 120px;
-      margin: 0;  
-    }
-    .logo_img{
-      height: 110px;
-      width: 160px;
-      max-width: 100%;
-      max-height: 100%;
-      }
-      .list-item{
-        width: 100%;
-        margin-bottom: 0;
-        font-size: 14px;
-        font-weight: normal;
-      }
-      .list-link {
-        margin-left: 15px;
-      } 
-      .split.left {
-        margin: 0 auto;
-      }
+    width: 80%;
   }
-  
-  @media(min-width: 960px) {
-    .split.left {
-      margin: 0 auto;
-      text-align: center;
-      align-items: center;
-      width: 80%;
-    }
-    .page_text_wrapper {
-      margin: 30px auto;
-      width: 80%;
-    }
-    .footer__wrapper{
-        width: 80%;
-    
-        justify-content: center;
-    }
-    .socialnetwork_img{
-       margin: 20px;
-    }
-   
-      .navbar{
-        width: 80%;
-      }
-      
-      .container__article-text{
-        height: 10%;
-        font-size: 32px;
-        
-        }
-      .title_cover{
-       width: 100px;
-       height: 40px;
-      }
-      .innerDiv{
+  .page_text_wrapper {
+    margin: 30px auto;
+    width: 80%;
+  }
+  .footer__wrapper {
+    width: 80%;
+
+    justify-content: center;
+  }
+  .socialnetwork_img {
+    margin: 20px;
+  }
+
+  .navbar {
+    width: 80%;
+  }
+
+  .container__article-text {
+    height: 10%;
+    font-size: 32px;
+  }
+  .title_cover {
+    width: 100px;
+    height: 40px;
+  }
+  .innerDiv {
     height: 86%;
-      }
   }
-  /* <-----------------end animation stuff-----------------> */
-  
+}
+/* <-----------------end animation stuff-----------------> */
