--- a/assets/style/contact.css
+++ b/assets/style/contact.css
@@ -57,8 +57,8 @@
     margin: 0 auto;
     margin-bottom: 10px;
     }
-    .list-item:hover {
-       color: #fff; 
+    .list-item:hover .list-link {
+      color: #fff;
     }
     .list-link {
       text-decoration: none;
@@ -266,7 +266,7 @@
     }
     .contact-textarea-wrp {
       margin: 0 auto;
-      width: 445px;
+      width: 470px;
     }
     /* textarea {
       width: 60%;
